@@ -45,7 +45,12 @@ class xos_opal_ThemeFactory {
 		// Grab the theme folder from request vars if present
 		if (@empty ( $options ['folderName'] )) {
 			// xoops_theme_select still exists to keep compatibilitie ...
-			if ( ( $req = @$_REQUEST['theme_select'] || $req = @$_REQUEST['xoops_theme_select'] ) && $this->isThemeAllowed( $req ) ) {
+			if (($req = @$_REQUEST ['xoops_theme_select']) && $this->isThemeAllowed ( $req )) {
+				$options ['folderName'] = $req;
+				if (isset ( $_SESSION ) && $this->allowUserSelection) {
+					$_SESSION [$this->xoBundleIdentifier] ['defaultTheme'] = $req;
+				}
+			} elseif (($req = @$_REQUEST ['theme_select']) && $this->isThemeAllowed ( $req )) {
 				$options ['folderName'] = $req;
 				if (isset ( $_SESSION ) && $this->allowUserSelection) {
 					$_SESSION [$this->xoBundleIdentifier] ['defaultTheme'] = $req;
